<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/viaRed"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_tela_lojas" tools:context="rafael.couto.newvia.TelaLojas">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:id="@+id/layoutLojas"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeAmo"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn01" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeBanana"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn02" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeBola"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn03" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeBusca"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn05" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeCafe"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn06" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeCheias"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn07" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeChina"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn08" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeConceito"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn09" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeConfraria"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn10" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeDeli"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn11" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeDequi"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn12" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeElaine"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn13" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeEstilo"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn14" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeExcel"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn15" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeGabriel"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn16" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeGallery"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn17" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeInfo"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn19" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeJapesca"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn20" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeJoara"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn21" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeChiapas"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn22" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeLuna"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn23" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeMapa"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn24" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeMeia"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn25" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeBoticario"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn26" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeOlitse"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn27" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomePastel"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn28" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomePizzolotto"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn29" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomePlaneta"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn30" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeRamlig"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn31" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeRede"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn32" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeRedeprint"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn33" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeRosa"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn34" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeStein"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn35" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeStudio"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn36" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeSummer"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn37" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeTalisma"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn38" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeTitton"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn39" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeToque"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn40" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeBeauty"
                android:background="@drawable/buttonbg"
                android:id="@+id/btn41" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
