<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/activity_vertical_margin"
              android:layout_marginLeft="@dimen/activity_horizontal_margin"
              android:layout_marginRight="@dimen/activity_horizontal_margin"
              android:layout_marginTop="@dimen/activity_vertical_margin"
              android:background="@color/md_white_1000"
              android:minHeight="?attr/listPreferredItemHeight"
              android:orientation="horizontal"
    >

    <ImageView
        android:id="@+id/list_item_loja_image"
        android:layout_width="@dimen/list_item_loja_image_width"
        android:layout_height="match_parent"
        android:contentDescription="@string/list_item_loja_image_description"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/adapter_text_margin"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/list_item_loja_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adapter_titulo_loja"
            android:textSize="@dimen/adapter_titulo_loja"
            />

        <TextView
            android:id="@+id/list_item_loja_open_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adapter_horario_loja_inicio"
            android:textSize="@dimen/adapter_outros"
            />

        <TextView
            android:id="@+id/list_item_loja_close_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adapter_horario_loja_fim"
            android:textSize="@dimen/adapter_outros"
            />

    </LinearLayout>

</LinearLayout>