<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viaRed"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="190dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/ivInicio"
                android:layout_marginBottom="5dp"
                android:src="@drawable/via" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/btnLojas"
                android:background="@drawable/homebtn"
                android:layout_marginBottom="15dp"
                android:id="@+id/btnLojas" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/btnMapa"
                android:background="@drawable/homebtn"
                android:layout_marginBottom="15dp"
                android:id="@+id/btnMapa" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/btnSite"
                android:background="@drawable/homebtn"
                android:id="@+id/btnSite" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
